--- a/index.html
+++ b/index.html
@@ -6,15 +6,27 @@
 margin: 0;
 padding: 0;
 }
+body{
+font-family: poppins;
+}
+meinfo{
+font-size: 110px'
+}
 </style>
 </head>
 
 <body>
 <center>
-<div style="background: black; color: white; padding: 40px;">
+<div style="background: black; color: white; padding: 20px; font-size: 14px;">
 <h1> Sadew Anuhas </h1>
 </div>
 </center>
+<div style="font-size: 13px; color: gray; left-padding: 20px;">
+<p> I'm Sadew Anuhas. Mama ithin Professional Graphic Designer Kenek, Video Editor Kenek & Weber...
+<br>
+Welcome to mn gana kiyweeeeema website.
+</p>
+</div>
 </body>
 
 </html>
