--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <html>
 <head>
-	<title>Sadew An</title>
+	<title>Sadew Online</title>
+	<link rel="icon" type="image/x-icon" href="s.png">
 <style>
+
+@import url(http://fonts.googleapis.com/earlyaccess/notosanssinhala.css);
+
 *{
+
 margin: 0;
 padding: 0;
 }
 body{
-font-family: poppins;
+cursor: pointer;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+
 }
 meinfo{
 font-size: 110px'
@@ -15,18 +24,30 @@ font-size: 110px'
 </style>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
+
 <center>
-<div style="background: black; color: white; padding: 20px; font-size: 14px;">
+	<div style="background: black; color: white; padding: 20px; font-size: 14px;">
 <h1> Sadew Anuhas </h1>
-</div>
+	</div>
 </center>
-<div style="font-size: 13px; color: gray; left-padding: 20px;">
-<p> I'm Sadew Anuhas. Mama ithin Professional Graphic Designer Kenek, Video Editor Kenek & Weber...
+	<div style="font-size: 13px; color: gray; padding-top: 35px; padding-left: 35px; padding-right: 450px;  text-align: justify; font-family: poppins;"  >
+<p > I'm Sadew Anuhas. Mama ithin Professional Graphic Designer Kenek, Video Editor Kenek & Weber... Welcome to mn gana kiyweeeeema website. Ithin mn me site eke me one page eka haduwe man gana kiynn nm nemei meka mn test krnn make kale oyala meka nikmt hri kiywnwt thnq,, Mge official website eke develop krn gamn team eka , man ayeth kiynw meka me nikn test ekkt haduwe, mokd meka 6/4 Danne nathi podi ekektth make krnn puluwan tharam podim podi programme ekk run wena site ekk,, ithin Guys mge new website eke (portfolio) Link ek mn methnt dala thiynnm eka hadl iwar unam.. samhr wit me wenakotth hadl iwr athi,, Ah! thw deyk anyway mek seo unoth mt krnn deyk nh meka fake web ekk nm newe but, mek seo unoth brand quality ek aduwenneth nh oyl hithn widiy poddk change krl balnnako ethakot mekath Creative ekkma wewi.
 <br>
-Welcome to mn gana kiyweeeeema website.
+THNQQQQQQ Guys#
+</p>
+	</div>
+	<div style="font-size: 15px; color: gray; padding-top: 35px; padding-left: 35px;   text-align: justify; font-family: TharuDigitalNikini.ttf;" >
+<b><p>
+_____=|=_____ <br>"හැම වෙලාවකම <br> අලුත් දේවල් <br> කරන්න බලන්න <br> හලොව්ස්, <div style="color: red;"> මැරෙනකම් </div> විතරයි <br> සෙල්ලන්, <br> ඉතින් <br> ඊට <br> කලින් <br> නොයෙකුත් <br> අලුත් දේවල් <br> එක්ක ජීවිතේ විඳින්න.."<br>-----------------------------
+</p></b>
+</div>
+<div style="font-size: 13px; color: gray; padding-top: 35px; padding-left: 35px; padding-right: 450px;  text-align: justify; font-family: poppins;"  >
+<p>
+~ I'm Sadew
 </p>
 </div>
+	
 </body>
 
 </html>
